[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Instances/PlayerUnit.gd" type="Script" id=1]
[ext_resource path="res://Materials/BlueUnit.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Instances/PlayerModel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Instances/SpinArea.tscn" type="PackedScene" id=4]

[sub_resource type="CylinderShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=2]
material = ExtResource( 2 )
mid_height = 2.0

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0.639216, 0.247059, 0.858824, 0.603922 )

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )

[node name="PlayerUnit" type="KinematicBody"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Spin" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2, 0 )

[node name="BodySimple" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="PlayerModel" parent="." instance=ExtResource( 3 )]

[node name="Face" type="MeshInstance" parent="."]
transform = Transform( 0.503852, 0, 0, 0, 0.503852, 0, 0, 0, 0.503852, 0, 2.839, -0.902 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="Shield" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.996516, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[node name="StoneTimer" type="Timer" parent="."]
one_shot = true

[node name="SpinArea" parent="." instance=ExtResource( 4 )]

[node name="CastPointTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="ShieldTimer" to="." method="end_shield"]
[connection signal="timeout" from="StoneTimer" to="." method="end_stone"]
